Add serde and serde_derive crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ dotenv = "0.10.1"
 futures = "0.1.17"
 hyper = "0.11.8"
 hyper-tls = "0.1.2"
+serde = "1.0.24"
+serde_derive = "1.0.24"
 tokio-core = "0.1.10"
