--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ hyper-tls = "0.1.2"
 serde = "1.0.24"
 serde_derive = "1.0.24"
 tokio-core = "0.1.10"
+weather_icons = "0.1.0"
 
 serde_json = "1.0.8"
