--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,11 @@ local = ["serde_json"]
 clap = "~2.29.0"
 darksky = "0.7.0"
 dotenv = "0.10.1"
+env_logger = "0.4.3"
 futures = "0.1.17"
 hyper = "0.11.9"
 hyper-tls = "0.1.2"
+log = "0.3.8"
 tokio-core = "0.1.10"
 weather_icons = "0.1.0"
 
