--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ local = ["serde_json"]
 clap = "~2.29.0"
 darksky = "0.7.0"
 dotenv = "0.10.1"
+drawille = "0.2.3"
 env_logger = "0.4.3"
 futures = "0.1.17"
 hyper = "0.11.9"
