--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ futures = "0.1.17"
 hyper = "0.11.9"
 hyper-tls = "0.1.2"
 log = "0.3.8"
+spark = "0.4.0"
 tokio-core = "0.1.10"
 weather_icons = "0.1.0"
 
