--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,9 @@ name = "weather"
 version = "0.1.0"
 authors = ["Matthew Klein <mklein994@gmail.com>"]
 
-[features]
-default = []
-local = ["serde_json"]
-
 [dependencies]
 clap = "~2.29.0"
-darksky = "0.7.0"
+darksky = { version = "0.7.0", features = ["reqwest"], default-features = false }
 dotenv = "0.10.1"
 drawille = "0.2.3"
 env_logger = "0.4.3"
@@ -17,8 +13,8 @@ futures = "0.1.17"
 hyper = "0.11.9"
 hyper-tls = "0.1.2"
 log = "0.3.8"
+reqwest = "0.8"
+serde_json = "1.0.8"
 spark = "0.4.0"
 tokio-core = "0.1.11"
 weather_icons = "0.1.0"
-
-serde_json = { version = "1.0.8", optional = true }
