--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,6 @@ log = "0.4.1"
 reqwest = "0.8"
 serde_json = "1.0.8"
 spark = "0.4.0"
+streaming-stats = "0.1.28"
 tokio-core = "0.1.11"
 weather_icons = "0.1.0"
