--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ dotenv = "0.10.1"
 drawille = "0.2.3"
 env_logger = "0.4.3"
 log = "0.4.1"
+read_color = "1.0"
 reqwest = "0.8"
 serde_json = "1.0.8"
 spark = { version = "0.4.0", git = "https://github.com/mklein994/rust-spark" }
