--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,10 @@ drawille = "0.2.3"
 env_logger = "0.5.1"
 log = "0.4.1"
 reqwest = "0.8"
+serde = "1.0.27"
 serde_json = "1.0.8"
+serde_derive = "1.0.27"
 spark = { version = "0.4.0", git = "https://github.com/mklein994/rust-spark" }
 streaming-stats = "0.1.28"
+toml = "0.4.5"
 weather_icons = "0.2.0"
