--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,22 @@ authors = ["Matthew Klein <mklein994@gmail.com>"]
 ansi_term = "0.11.0"
 chrono = "0.4.0"
 clap = { version = "2.29.0", features = ["wrap_help"] }
-darksky = { version = "0.8.1", features = ["reqwest"], default-features = false }
 dirs = "1.0.2"
 dotenv = "0.13.0"
 env_logger = "0.5.1"
 lazy_static = "1.0.0"
 log = "0.4.1"
-reqwest = "0.8"
+reqwest = "0.9"
 serde = "1.0.27"
 serde_json = "1.0.8"
 serde_derive = "1.0.27"
 toml = "0.4.5"
 weather_icons = { git = "https://github.com/mklein994/weather_icons" }
+
+[dependencies.darksky]
+# version = ">0.8.1"
+features = ["reqwest"]
+git = "https://github.com/zeyla/darksky.rs"
+# TODO: change this to the latest stable version > 0.8.1
+rev = "12685a4e"
+default-features = false
