--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "weather"
 version = "0.1.0"
 authors = ["Matthew Klein <mklein994@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 ansi_term = "0.11.0"
