--- a/.build.yml
+++ b/.build.yml
@@ -2,21 +2,24 @@ image: archlinux
 sources:
     - https://github.com/mklein994/weather
 environment:
-  PATH: ~/.cargo/bin:$PATH
   PROJECT_DIR: "weather"
 tasks:
     - rustup: |
         curl -sSf -o rustup.sh "https://sh.rustup.rs"
         sh ./rustup.sh -y
+        . ~/.cargo/env
         rustc --version
         cargo --version
     - fmt_check: |
+        . ~/.cargo/env
         rustup component add rustfmt
         cd $PROJECT_DIR
         cargo fmt -- --check
     - build: |
+        . ~/.cargo/env
         cd $PROJECT_DIR
         cargo build --verbose
     - test: |
+        . ~/.cargo/env
         cd $PROJECT_DIR
         cargo test --verbose
