Change darksky.rs remote url to my forked copy
For some reason, the original maintainer went AWOL and the new
repository (rparrott/darksky.rs) has a completely different history, and
only has up to version 0.7, last updated over a year ago.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ weather_icons = { git = "https://github.com/mklein994/weather_icons" }
 [dependencies.darksky]
 # version = ">0.8.1"
 features = ["reqwest"]
-git = "https://github.com/rusty-crates/darksky.rs"
+git = "https://github.com/mklein994/darksky.rs"
 # TODO: change this to the latest stable version > 0.8.1, which includes the
 # necessary version bump to openssl.
 rev = "fb9a9d6"
